896.	[bug]		fdupont
	Removed exit() in D2 for version command line processing.
	This interfered with how the unit-tests were run.
	(Trac #3616, git 758a61e277675e89d857a22c3f8e844de307dca6)

895.	[doc]		tomek
	Host reservation for DHCPv4 and DHCPv6 is now documented.
	(Trac #3575, git a981e42eb0f39d27795364a6862b3a5e574e540a)

894.	[bug]		fdupont
	Accept empty options or sub options in DHCPv4 messages unpacking
	routines.
	(Trac #3661, git 42a4854208ec16834c590a9316b9a5306c60a3bb)

893.	[func,bug]	fdupont
	Changed the qualifying-suffix parameter in the dhcp-ddns
	configuration element to be mandatory with no default value when
	updates are enabled (i.e., the enable-updates mandatory parameter
	is true).
	(Trac #3632, git 12808651448837c611e4f6a262f7a1eb3deaf8da)

892.	[func]		sar
	A class, LeaseFileStats, has been added to provide simple
	statistics for use with lease files.  Also added logging
	to the kea-lfc process per the design.
	See http://kea.isc.org/wiki/LFCDesign for the design.
	(Trac #3667, git 7f36e034fe79d85f317d7d07e2fe636d6cdf1f6e)

891.	[func]		tomek
	libdhcpsrv: Allocation Engine now uses statically assigned
	addresses when processing DHCPv6 renewals.
	(Trac #3677, git 9ce50790c91624937ff2b622e4afff36d5d3cc2d)

890.	[func]		marcin
	It is now possible to specify whether the DHCPv4 server
	should use raw sockets or IP/UDP datagram sockets to
	receive and send DHCP messages. The configuration format
	has been changed for the selection of interfaces on which
	the DHCPv4 and DHCPv6 servers should listen. The
	configuration files using an old format are incompatible
	with the latest version of Kea.
	(Trac #3604, git c726bbc4eae0f576f6791c7490bfba8c30a401d9)

889.	[bug]		marcin
	Resolved a bug in the DHCPv4 allocation engine whereby the
	client could request and obtain an address reserved for
	another client.
	(Trac #3690, git 1afa4e24b0fcdd6d3a2e596663ce1102ffe2340d)

888.	[func]		marcin
	DHCPv4 and DHCPv6 servers launch the kea-lfc program, according